--- a/package.json
+++ b/package.json
@@ -1,21 +1,59 @@
 {
-  "name": "react-hack-on-chain",
+  "homepage": ".",
+  "name": "coaltracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@headlessui/react": "^1.7.5",
+    "@heroicons/react": "^2.0.13",
+    "@material-ui/core": "^4.11.2",
+    "@nebulous/skynet": "^2.0.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@truffle/hdwallet-provider": "^1.5.1",
+    "classnames": "^2.2.6",
+    "crypto-js": "^4.0.0",
+    "eth-rpc-errors": "^4.0.3",
+    "history": "^5.0.0",
+    "identicon.js": "^2.3.3",
+    "ipfs-car": "^0.9.1",
+    "ipfs-http-client": "^33.1.1",
+    "jsqr": "^1.4.0",
+    "mdbreact": "^5.0.1",
+    "parse": "^3.3.1",
+    "qr-scanner": "^1.3.0",
+    "qrcode.react": "^1.0.1",
+    "qrscan": "^1.0.6",
+    "react-country-region-selector": "^3.4.0",
+    "react-google-maps": "^9.4.5",
+    "react-qr-code": "^2.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "react-select-country-list": "^2.2.3",
+    "reactstrap": "^8.8.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.0.1",
+    "skynet-js": "^2.9.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.4",
+    "upng-js": "^2.1.0",
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.0",
+    "web3.storage": "^3.5.7"
+  },
+  "peerDependencies": {
+    "react": "~0.14.8 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "~0.14.8 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +72,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "gulp-sass": "^5.1.0"
   }
 }
